corrected slice error message

--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -4,14 +4,18 @@
       <th></th>
       <th>team</th>
       <th>position</th>
-      <th>value</th>
-      <th>projection</th>
-      <th>now_cost</th>
-      <th>total_rank</th>
       <th>form</th>
+      <th>value</th>
+      <th>now_cost</th>
+      <th>predicted_value</th>
+      <th>projection</th>
+      <th>Z Score</th>
+      <th>total_rank</th>
     </tr>
     <tr>
       <th>web_name</th>
+      <th></th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,204 +27,244 @@
   </thead>
   <tbody>
     <tr>
+      <th>Salah</th>
+      <td>Liverpool</td>
+      <td>Midfielder</td>
+      <td>6.2</td>
+      <td>15.793651</td>
+      <td>12.6</td>
+      <td>22.276948</td>
+      <td>280.689539</td>
+      <td>15.658361</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <th>Pereira</th>
+      <td>West Brom</td>
+      <td>Midfielder</td>
+      <td>10.5</td>
+      <td>24.000000</td>
+      <td>5.5</td>
+      <td>22.130179</td>
+      <td>121.715984</td>
+      <td>13.597813</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
       <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>18.173913</td>
-      <td>213.474192</td>
+      <td>3.0</td>
+      <td>19.217391</td>
       <td>11.5</td>
-      <td>1.0</td>
-      <td>6.2</td>
+      <td>20.630431</td>
+      <td>237.249953</td>
+      <td>12.983139</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>Son</th>
       <td>Spurs</td>
       <td>Midfielder</td>
-      <td>19.042553</td>
-      <td>179.198157</td>
-      <td>9.4</td>
-      <td>2.0</td>
-      <td>3.7</td>
-    </tr>
-    <tr>
-      <th>Mahrez</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>15.925926</td>
-      <td>133.142519</td>
-      <td>8.1</td>
-      <td>3.0</td>
-      <td>7.3</td>
-    </tr>
-    <tr>
-      <th>Ward-Prowse</th>
-      <td>Southampton</td>
-      <td>Midfielder</td>
-      <td>21.355932</td>
-      <td>122.733718</td>
-      <td>5.9</td>
-      <td>4.0</td>
-      <td>4.8</td>
-    </tr>
-    <tr>
-      <th>Salah</th>
-      <td>Liverpool</td>
-      <td>Midfielder</td>
-      <td>14.032258</td>
-      <td>205.150410</td>
-      <td>12.4</td>
       <td>5.0</td>
-      <td>2.5</td>
-    </tr>
-    <tr>
-      <th>Gündogan</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>23.278689</td>
-      <td>131.403192</td>
-      <td>6.1</td>
-      <td>6.0</td>
-      <td>3.2</td>
+      <td>20.947368</td>
+      <td>9.5</td>
+      <td>20.865946</td>
+      <td>198.226485</td>
+      <td>12.924676</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>Rashford</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>14.736842</td>
-      <td>148.615420</td>
-      <td>9.5</td>
-      <td>7.0</td>
-      <td>5.2</td>
+      <td>5.0</td>
+      <td>16.666667</td>
+      <td>9.6</td>
+      <td>18.459978</td>
+      <td>177.215792</td>
+      <td>10.757970</td>
+      <td>5.0</td>
     </tr>
     <tr>
-      <th>Trossard</th>
-      <td>Brighton</td>
-      <td>Midfielder</td>
-      <td>18.448276</td>
-      <td>98.140129</td>
-      <td>5.8</td>
-      <td>8.0</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Soucek</th>
+      <th>Bowen</th>
       <td>West Ham</td>
       <td>Midfielder</td>
-      <td>23.018868</td>
-      <td>110.068667</td>
-      <td>5.3</td>
-      <td>9.0</td>
-      <td>2.6</td>
-    </tr>
-    <tr>
-      <th>Mount</th>
-      <td>Chelsea</td>
-      <td>Midfielder</td>
-      <td>16.714286</td>
-      <td>123.541733</td>
-      <td>7.0</td>
-      <td>10.0</td>
-      <td>4.5</td>
-    </tr>
-    <tr>
-      <th>De Bruyne</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>10.504202</td>
-      <td>159.275782</td>
-      <td>11.9</td>
-      <td>11.0</td>
-      <td>4.8</td>
-    </tr>
-    <tr>
-      <th>Sterling</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>11.578947</td>
-      <td>191.241244</td>
-      <td>11.4</td>
-      <td>12.0</td>
-      <td>2.0</td>
-    </tr>
-    <tr>
-      <th>Raphinha</th>
-      <td>Leeds</td>
-      <td>Midfielder</td>
-      <td>18.771930</td>
-      <td>103.228490</td>
-      <td>5.7</td>
-      <td>13.0</td>
-      <td>4.6</td>
-    </tr>
-    <tr>
-      <th>Neto</th>
-      <td>Wolves</td>
-      <td>Midfielder</td>
-      <td>20.701754</td>
-      <td>112.949501</td>
-      <td>5.7</td>
-      <td>14.0</td>
-      <td>2.8</td>
-    </tr>
-    <tr>
-      <th>Barnes</th>
-      <td>Leicester</td>
-      <td>Midfielder</td>
-      <td>18.805970</td>
-      <td>118.992232</td>
-      <td>6.7</td>
-      <td>15.0</td>
-      <td>2.8</td>
-    </tr>
-    <tr>
-      <th>Tielemans</th>
-      <td>Leicester</td>
-      <td>Midfielder</td>
-      <td>17.076923</td>
-      <td>119.840709</td>
-      <td>6.5</td>
-      <td>16.0</td>
-      <td>3.4</td>
+      <td>6.2</td>
+      <td>21.500000</td>
+      <td>6.0</td>
+      <td>20.159533</td>
+      <td>120.957195</td>
+      <td>10.414264</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>Harrison</th>
       <td>Leeds</td>
       <td>Midfielder</td>
-      <td>20.555556</td>
-      <td>98.958192</td>
+      <td>5.2</td>
+      <td>24.444444</td>
       <td>5.4</td>
-      <td>17.0</td>
-      <td>2.6</td>
+      <td>18.566247</td>
+      <td>100.257736</td>
+      <td>9.819898</td>
+      <td>7.0</td>
     </tr>
     <tr>
-      <th>Jorginho</th>
+      <th>Mount</th>
       <td>Chelsea</td>
       <td>Midfielder</td>
-      <td>19.361702</td>
-      <td>84.626743</td>
-      <td>4.7</td>
-      <td>18.0</td>
-      <td>4.0</td>
+      <td>4.5</td>
+      <td>18.493151</td>
+      <td>7.3</td>
+      <td>19.422063</td>
+      <td>141.781061</td>
+      <td>9.478165</td>
+      <td>8.0</td>
     </tr>
     <tr>
-      <th>Neves</th>
-      <td>Wolves</td>
+      <th>Soucek</th>
+      <td>West Ham</td>
       <td>Midfielder</td>
-      <td>17.647059</td>
-      <td>88.984043</td>
-      <td>5.1</td>
-      <td>19.0</td>
-      <td>4.0</td>
+      <td>2.2</td>
+      <td>24.716981</td>
+      <td>5.3</td>
+      <td>22.992976</td>
+      <td>121.862772</td>
+      <td>9.149620</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Ward-Prowse</th>
+      <td>Southampton</td>
+      <td>Midfielder</td>
+      <td>2.0</td>
+      <td>22.758621</td>
+      <td>5.8</td>
+      <td>23.245164</td>
+      <td>134.821953</td>
+      <td>9.023699</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>Gündogan</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>0.7</td>
+      <td>24.827586</td>
+      <td>5.8</td>
+      <td>22.249473</td>
+      <td>129.046943</td>
+      <td>8.650211</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <th>Mané</th>
       <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>10.169492</td>
-      <td>152.868631</td>
-      <td>11.8</td>
+      <td>4.2</td>
+      <td>11.709402</td>
+      <td>11.7</td>
+      <td>14.520509</td>
+      <td>169.889961</td>
+      <td>8.535812</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>Lingard</th>
+      <td>West Ham</td>
+      <td>Midfielder</td>
+      <td>8.8</td>
+      <td>13.787879</td>
+      <td>6.6</td>
+      <td>14.232066</td>
+      <td>93.931633</td>
+      <td>8.441063</td>
+      <td>13.0</td>
+    </tr>
+    <tr>
+      <th>Greenwood</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>8.8</td>
+      <td>11.971831</td>
+      <td>7.1</td>
+      <td>14.805866</td>
+      <td>105.121646</td>
+      <td>8.392691</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Sterling</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>2.0</td>
+      <td>12.432432</td>
+      <td>11.1</td>
+      <td>16.398244</td>
+      <td>182.020508</td>
+      <td>8.037006</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Foden</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>3.7</td>
+      <td>19.666667</td>
+      <td>6.0</td>
+      <td>18.114513</td>
+      <td>108.687076</td>
+      <td>7.939463</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Neto</th>
+      <td>Wolves</td>
+      <td>Midfielder</td>
+      <td>1.5</td>
+      <td>22.142857</td>
+      <td>5.6</td>
+      <td>20.793106</td>
+      <td>116.441396</td>
+      <td>7.765723</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Sigurdsson</th>
+      <td>Everton</td>
+      <td>Midfielder</td>
+      <td>5.5</td>
+      <td>15.797101</td>
+      <td>6.9</td>
+      <td>15.488638</td>
+      <td>106.871605</td>
+      <td>7.736619</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Westwood</th>
+      <td>Burnley</td>
+      <td>Midfielder</td>
+      <td>4.5</td>
+      <td>17.924528</td>
+      <td>5.3</td>
+      <td>19.697198</td>
+      <td>104.395148</td>
+      <td>7.691792</td>
+      <td>19.0</td>
+    </tr>
+    <tr>
+      <th>Tielemans</th>
+      <td>Leicester</td>
+      <td>Midfielder</td>
+      <td>2.2</td>
+      <td>18.750000</td>
+      <td>6.4</td>
+      <td>19.897687</td>
+      <td>127.345195</td>
+      <td>7.635524</td>
       <td>20.0</td>
-      <td>3.0</td>
     </tr>
   </tbody>
 </table>
