--- a/templates/update.html
+++ b/templates/update.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <title>Copies verification template</title>
 <meta charset="UTF-8">
@@ -42,4 +42,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 
 </body>
+<script>
+  exec('python eplWebscrape.py')
+</script>
 </html>
