--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -4,14 +4,18 @@
       <th></th>
       <th>team</th>
       <th>position</th>
-      <th>value</th>
-      <th>projection</th>
-      <th>now_cost</th>
-      <th>total_rank</th>
       <th>form</th>
+      <th>value</th>
+      <th>now_cost</th>
+      <th>predicted_value</th>
+      <th>projection</th>
+      <th>Z Score</th>
+      <th>total_rank</th>
     </tr>
     <tr>
       <th>web_name</th>
+      <th></th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,204 +27,244 @@
   </thead>
   <tbody>
     <tr>
-      <th>Shaw</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>20.769231</td>
-      <td>105.166976</td>
-      <td>5.2</td>
-      <td>1.0</td>
-      <td>7.4</td>
-    </tr>
-    <tr>
       <th>Dallas</th>
       <td>Leeds</td>
       <td>Defender</td>
-      <td>23.921569</td>
-      <td>107.807608</td>
-      <td>5.1</td>
-      <td>2.0</td>
+      <td>6.5</td>
+      <td>28.461538</td>
       <td>5.2</td>
-    </tr>
-    <tr>
-      <th>Stones</th>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>23.018868</td>
-      <td>112.184484</td>
-      <td>5.3</td>
-      <td>3.0</td>
-      <td>5.2</td>
-    </tr>
-    <tr>
-      <th>Maguire</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>20.545455</td>
-      <td>114.197662</td>
-      <td>5.5</td>
-      <td>4.0</td>
-      <td>6.2</td>
-    </tr>
-    <tr>
-      <th>Dias</th>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>20.819672</td>
-      <td>128.708045</td>
-      <td>6.1</td>
-      <td>5.0</td>
-      <td>4.5</td>
-    </tr>
-    <tr>
-      <th>Wan-Bissaka</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>21.052632</td>
-      <td>119.371275</td>
-      <td>5.7</td>
-      <td>6.0</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Cresswell</th>
-      <td>West Ham</td>
-      <td>Defender</td>
-      <td>22.881356</td>
-      <td>121.165873</td>
-      <td>5.9</td>
-      <td>7.0</td>
-      <td>3.4</td>
-    </tr>
-    <tr>
-      <th>Cancelo</th>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>20.000000</td>
-      <td>124.260359</td>
-      <td>6.1</td>
-      <td>8.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
-      <th>Targett</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>22.745098</td>
-      <td>112.330114</td>
-      <td>5.1</td>
-      <td>9.0</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Azpilicueta</th>
-      <td>Chelsea</td>
-      <td>Defender</td>
-      <td>16.724138</td>
-      <td>98.476457</td>
-      <td>5.8</td>
-      <td>10.0</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Robertson</th>
-      <td>Liverpool</td>
-      <td>Defender</td>
-      <td>15.915493</td>
-      <td>126.802799</td>
-      <td>7.1</td>
-      <td>11.0</td>
-      <td>4.2</td>
+      <td>26.431416</td>
+      <td>137.443361</td>
+      <td>14.126988</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>Alexander-Arnold</th>
       <td>Liverpool</td>
       <td>Defender</td>
-      <td>12.876712</td>
-      <td>130.247259</td>
-      <td>7.3</td>
-      <td>12.0</td>
-      <td>5.2</td>
+      <td>8.2</td>
+      <td>16.710526</td>
+      <td>7.6</td>
+      <td>18.755991</td>
+      <td>142.545531</td>
+      <td>12.466478</td>
+      <td>2.0</td>
     </tr>
     <tr>
-      <th>Mings</th>
-      <td>Aston Villa</td>
+      <th>Wan-Bissaka</th>
+      <td>Man Utd</td>
       <td>Defender</td>
-      <td>20.185185</td>
-      <td>109.709418</td>
-      <td>5.4</td>
-      <td>13.0</td>
-      <td>3.2</td>
+      <td>3.5</td>
+      <td>23.508772</td>
+      <td>5.7</td>
+      <td>22.927697</td>
+      <td>130.687874</td>
+      <td>10.508221</td>
+      <td>3.0</td>
     </tr>
     <tr>
-      <th>Keane</th>
-      <td>Everton</td>
+      <th>Robertson</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>19.215686</td>
-      <td>97.953469</td>
-      <td>5.1</td>
-      <td>14.0</td>
-      <td>4.8</td>
+      <td>4.0</td>
+      <td>18.169014</td>
+      <td>7.1</td>
+      <td>20.295372</td>
+      <td>144.097139</td>
+      <td>10.140032</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>Dunk</th>
       <td>Brighton</td>
       <td>Defender</td>
-      <td>20.200000</td>
-      <td>99.612187</td>
+      <td>4.2</td>
+      <td>24.081633</td>
+      <td>4.9</td>
+      <td>21.870256</td>
+      <td>107.164255</td>
+      <td>9.918247</td>
       <td>5.0</td>
-      <td>15.0</td>
-      <td>4.0</td>
     </tr>
     <tr>
-      <th>Konsa</th>
-      <td>Aston Villa</td>
+      <th>Dias</th>
+      <td>Man City</td>
       <td>Defender</td>
-      <td>21.276596</td>
-      <td>95.624381</td>
-      <td>4.7</td>
-      <td>16.0</td>
+      <td>2.7</td>
+      <td>22.131148</td>
+      <td>6.1</td>
+      <td>22.326036</td>
+      <td>136.188818</td>
+      <td>9.901779</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Evans</th>
+      <td>Leicester</td>
+      <td>Defender</td>
+      <td>5.5</td>
+      <td>17.678571</td>
+      <td>5.6</td>
+      <td>20.250510</td>
+      <td>113.402858</td>
+      <td>9.437955</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Shaw</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
       <td>3.2</td>
+      <td>22.407407</td>
+      <td>5.4</td>
+      <td>21.385365</td>
+      <td>115.480969</td>
+      <td>9.246239</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>Maguire</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>2.5</td>
+      <td>22.363636</td>
+      <td>5.5</td>
+      <td>22.297653</td>
+      <td>122.637093</td>
+      <td>9.136709</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>Chilwell</th>
       <td>Chelsea</td>
       <td>Defender</td>
-      <td>17.931034</td>
-      <td>102.088098</td>
+      <td>3.5</td>
+      <td>20.344828</td>
       <td>5.8</td>
-      <td>17.0</td>
-      <td>4.2</td>
+      <td>20.295642</td>
+      <td>117.714726</td>
+      <td>9.024261</td>
+      <td>10.0</td>
     </tr>
     <tr>
-      <th>Adarabioyo</th>
-      <td>Fulham</td>
+      <th>Coufal</th>
+      <td>West Ham</td>
       <td>Defender</td>
-      <td>20.222222</td>
-      <td>88.741477</td>
-      <td>4.5</td>
-      <td>18.0</td>
-      <td>3.8</td>
+      <td>3.5</td>
+      <td>22.340426</td>
+      <td>4.7</td>
+      <td>21.412954</td>
+      <td>100.640883</td>
+      <td>8.669062</td>
+      <td>11.0</td>
     </tr>
     <tr>
-      <th>Andersen</th>
+      <th>Cresswell</th>
+      <td>West Ham</td>
+      <td>Defender</td>
+      <td>0.2</td>
+      <td>23.859649</td>
+      <td>5.7</td>
+      <td>22.659152</td>
+      <td>129.157166</td>
+      <td>8.333475</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>Aina</th>
       <td>Fulham</td>
       <td>Defender</td>
-      <td>19.333333</td>
-      <td>84.054488</td>
-      <td>4.5</td>
-      <td>19.0</td>
-      <td>4.6</td>
+      <td>3.0</td>
+      <td>22.954545</td>
+      <td>4.4</td>
+      <td>21.736068</td>
+      <td>95.638699</td>
+      <td>8.241200</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>Coady</th>
       <td>Wolves</td>
       <td>Defender</td>
-      <td>17.708333</td>
-      <td>83.702714</td>
-      <td>4.8</td>
-      <td>20.0</td>
+      <td>3.5</td>
+      <td>19.800000</td>
       <td>5.0</td>
+      <td>19.746894</td>
+      <td>98.734470</td>
+      <td>7.912607</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Targett</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>1.0</td>
+      <td>24.000000</td>
+      <td>5.0</td>
+      <td>21.956736</td>
+      <td>109.783681</td>
+      <td>7.909761</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Mings</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>1.5</td>
+      <td>21.296296</td>
+      <td>5.4</td>
+      <td>21.296115</td>
+      <td>114.999021</td>
+      <td>7.806476</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Lindelöf</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>3.0</td>
+      <td>20.416667</td>
+      <td>4.8</td>
+      <td>20.222586</td>
+      <td>97.068412</td>
+      <td>7.655958</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Castagne</th>
+      <td>Leicester</td>
+      <td>Defender</td>
+      <td>5.5</td>
+      <td>15.344828</td>
+      <td>5.8</td>
+      <td>15.448968</td>
+      <td>89.604013</td>
+      <td>7.615912</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Keane</th>
+      <td>Everton</td>
+      <td>Defender</td>
+      <td>2.0</td>
+      <td>20.784314</td>
+      <td>5.1</td>
+      <td>21.050719</td>
+      <td>107.358665</td>
+      <td>7.614511</td>
+      <td>19.0</td>
+    </tr>
+    <tr>
+      <th>James</th>
+      <td>Chelsea</td>
+      <td>Defender</td>
+      <td>3.0</td>
+      <td>19.800000</td>
+      <td>5.0</td>
+      <td>19.703578</td>
+      <td>98.517892</td>
+      <td>7.570094</td>
+      <td>20.0</td>
     </tr>
   </tbody>
 </table>
