--- a/templates/goalies.html
+++ b/templates/goalies.html
@@ -4,14 +4,18 @@
       <th></th>
       <th>team</th>
       <th>position</th>
-      <th>value</th>
-      <th>projection</th>
-      <th>now_cost</th>
-      <th>total_rank</th>
       <th>form</th>
+      <th>value</th>
+      <th>now_cost</th>
+      <th>predicted_value</th>
+      <th>projection</th>
+      <th>Z Score</th>
+      <th>total_rank</th>
     </tr>
     <tr>
       <th>web_name</th>
+      <th></th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,204 +27,244 @@
   </thead>
   <tbody>
     <tr>
+      <th>Johnstone</th>
+      <td>West Brom</td>
+      <td>Goalkeeper</td>
+      <td>7.0</td>
+      <td>27.555556</td>
+      <td>4.5</td>
+      <td>25.685141</td>
+      <td>115.583134</td>
+      <td>11.862785</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
       <th>Meslier</th>
       <td>Leeds</td>
       <td>Goalkeeper</td>
-      <td>27.173913</td>
-      <td>118.774031</td>
-      <td>4.6</td>
-      <td>1.0</td>
-      <td>7.0</td>
+      <td>4.5</td>
+      <td>30.425532</td>
+      <td>4.7</td>
+      <td>28.483397</td>
+      <td>133.871965</td>
+      <td>11.545630</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <th>Martínez</th>
       <td>Aston Villa</td>
       <td>Goalkeeper</td>
-      <td>28.333333</td>
-      <td>143.021330</td>
-      <td>5.4</td>
-      <td>2.0</td>
-      <td>4.2</td>
-    </tr>
-    <tr>
-      <th>Mendy</th>
-      <td>Chelsea</td>
-      <td>Goalkeeper</td>
-      <td>22.156863</td>
-      <td>102.161535</td>
-      <td>5.1</td>
-      <td>3.0</td>
-      <td>7.8</td>
-    </tr>
-    <tr>
-      <th>Lloris</th>
-      <td>Spurs</td>
-      <td>Goalkeeper</td>
-      <td>21.250000</td>
-      <td>124.166002</td>
-      <td>5.6</td>
-      <td>4.0</td>
-      <td>4.3</td>
-    </tr>
-    <tr>
-      <th>Johnstone</th>
-      <td>West Brom</td>
-      <td>Goalkeeper</td>
-      <td>21.333333</td>
-      <td>103.383605</td>
-      <td>4.5</td>
-      <td>5.0</td>
-      <td>5.8</td>
-    </tr>
-    <tr>
-      <th>Guaita</th>
-      <td>Crystal Palace</td>
-      <td>Goalkeeper</td>
-      <td>21.875000</td>
-      <td>103.280323</td>
-      <td>4.8</td>
-      <td>6.0</td>
-      <td>5.4</td>
-    </tr>
-    <tr>
-      <th>Ederson</th>
-      <td>Man City</td>
-      <td>Goalkeeper</td>
-      <td>21.147541</td>
-      <td>130.908679</td>
-      <td>6.1</td>
-      <td>7.0</td>
-      <td>3.3</td>
-    </tr>
-    <tr>
-      <th>Areola</th>
-      <td>Fulham</td>
-      <td>Goalkeeper</td>
-      <td>23.913043</td>
-      <td>107.904677</td>
-      <td>4.6</td>
-      <td>8.0</td>
-      <td>3.8</td>
-    </tr>
-    <tr>
-      <th>Pope</th>
-      <td>Burnley</td>
-      <td>Goalkeeper</td>
-      <td>23.272727</td>
-      <td>130.867906</td>
-      <td>5.5</td>
-      <td>9.0</td>
-      <td>2.0</td>
-    </tr>
-    <tr>
-      <th>Schmeichel</th>
-      <td>Leicester</td>
-      <td>Goalkeeper</td>
-      <td>21.111111</td>
-      <td>114.091558</td>
-      <td>5.4</td>
-      <td>10.0</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Fabianski</th>
-      <td>West Ham</td>
-      <td>Goalkeeper</td>
-      <td>22.000000</td>
-      <td>107.635221</td>
-      <td>5.0</td>
-      <td>11.0</td>
       <td>2.8</td>
+      <td>30.370370</td>
+      <td>5.4</td>
+      <td>27.921269</td>
+      <td>150.774854</td>
+      <td>11.102235</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>Patrício</th>
       <td>Wolves</td>
       <td>Goalkeeper</td>
-      <td>19.622642</td>
-      <td>106.829276</td>
+      <td>4.5</td>
+      <td>23.018868</td>
       <td>5.3</td>
-      <td>12.0</td>
-      <td>3.5</td>
+      <td>23.016609</td>
+      <td>121.988029</td>
+      <td>9.549750</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>Leno</th>
-      <td>Arsenal</td>
+      <th>Ederson</th>
+      <td>Man City</td>
       <td>Goalkeeper</td>
-      <td>20.400000</td>
-      <td>101.903427</td>
+      <td>2.7</td>
+      <td>22.459016</td>
+      <td>6.1</td>
+      <td>22.661187</td>
+      <td>138.233238</td>
+      <td>8.910638</td>
       <td>5.0</td>
-      <td>13.0</td>
-      <td>2.4</td>
+    </tr>
+    <tr>
+      <th>Pope</th>
+      <td>Burnley</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>24.727273</td>
+      <td>5.5</td>
+      <td>24.393507</td>
+      <td>134.164288</td>
+      <td>8.746548</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Lloris</th>
+      <td>Spurs</td>
+      <td>Goalkeeper</td>
+      <td>2.5</td>
+      <td>23.035714</td>
+      <td>5.6</td>
+      <td>23.168181</td>
+      <td>129.741813</td>
+      <td>8.550711</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Schmeichel</th>
+      <td>Leicester</td>
+      <td>Goalkeeper</td>
+      <td>2.5</td>
+      <td>22.962963</td>
+      <td>5.4</td>
+      <td>22.959499</td>
+      <td>123.981295</td>
+      <td>8.301259</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>Ramsdale</th>
       <td>Sheffield Utd</td>
       <td>Goalkeeper</td>
-      <td>17.173913</td>
-      <td>85.445718</td>
+      <td>4.2</td>
+      <td>20.869565</td>
       <td>4.6</td>
-      <td>14.0</td>
-      <td>4.0</td>
+      <td>22.245902</td>
+      <td>102.331149</td>
+      <td>8.112739</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Fabianski</th>
+      <td>West Ham</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>23.600000</td>
+      <td>5.0</td>
+      <td>23.498288</td>
+      <td>117.491438</td>
+      <td>7.837426</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>Guaita</th>
+      <td>Crystal Palace</td>
+      <td>Goalkeeper</td>
+      <td>2.3</td>
+      <td>23.333333</td>
+      <td>4.8</td>
+      <td>23.296961</td>
+      <td>111.825412</td>
+      <td>7.749977</td>
+      <td>11.0</td>
+    </tr>
+    <tr>
+      <th>Areola</th>
+      <td>Fulham</td>
+      <td>Goalkeeper</td>
+      <td>1.7</td>
+      <td>25.000000</td>
+      <td>4.6</td>
+      <td>24.219044</td>
+      <td>111.407604</td>
+      <td>7.677695</td>
+      <td>12.0</td>
     </tr>
     <tr>
       <th>Alisson</th>
       <td>Liverpool</td>
       <td>Goalkeeper</td>
-      <td>15.084746</td>
-      <td>95.390259</td>
+      <td>3.8</td>
+      <td>17.627119</td>
       <td>5.9</td>
-      <td>15.0</td>
-      <td>3.5</td>
-    </tr>
-    <tr>
-      <th>Pickford</th>
-      <td>Everton</td>
-      <td>Goalkeeper</td>
-      <td>16.458333</td>
-      <td>79.361222</td>
-      <td>4.8</td>
-      <td>16.0</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>de Gea</th>
-      <td>Man Utd</td>
-      <td>Goalkeeper</td>
-      <td>16.415094</td>
-      <td>88.965557</td>
-      <td>5.3</td>
-      <td>17.0</td>
-      <td>2.4</td>
-    </tr>
-    <tr>
-      <th>McCarthy</th>
-      <td>Southampton</td>
-      <td>Goalkeeper</td>
-      <td>18.222222</td>
-      <td>80.391547</td>
-      <td>4.5</td>
-      <td>18.0</td>
-      <td>0.6</td>
+      <td>19.079028</td>
+      <td>112.566266</td>
+      <td>7.604052</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>Sánchez</th>
       <td>Brighton</td>
       <td>Goalkeeper</td>
-      <td>15.777778</td>
-      <td>67.484552</td>
-      <td>4.5</td>
+      <td>4.8</td>
+      <td>19.565217</td>
+      <td>4.6</td>
+      <td>18.505250</td>
+      <td>85.124150</td>
+      <td>7.541195</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Mendy</th>
+      <td>Chelsea</td>
+      <td>Goalkeeper</td>
+      <td>1.8</td>
+      <td>23.076923</td>
+      <td>5.2</td>
+      <td>21.266074</td>
+      <td>110.583582</td>
+      <td>7.317498</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Leno</th>
+      <td>Arsenal</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>22.000000</td>
+      <td>5.0</td>
+      <td>22.021032</td>
+      <td>110.105161</td>
+      <td>7.210011</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Pickford</th>
+      <td>Everton</td>
+      <td>Goalkeeper</td>
+      <td>2.5</td>
+      <td>18.541667</td>
+      <td>4.8</td>
+      <td>18.050178</td>
+      <td>86.640852</td>
+      <td>5.878034</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>McCarthy</th>
+      <td>Southampton</td>
+      <td>Goalkeeper</td>
+      <td>0.3</td>
+      <td>18.863636</td>
+      <td>4.4</td>
+      <td>19.061248</td>
+      <td>83.869493</td>
+      <td>4.380808</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>de Gea</th>
+      <td>Man Utd</td>
+      <td>Goalkeeper</td>
+      <td>0.0</td>
+      <td>16.415094</td>
+      <td>5.3</td>
+      <td>17.096409</td>
+      <td>90.610967</td>
+      <td>3.957809</td>
       <td>19.0</td>
-      <td>2.6</td>
     </tr>
     <tr>
       <th>Darlow</th>
       <td>Newcastle</td>
       <td>Goalkeeper</td>
-      <td>16.000000</td>
-      <td>84.072119</td>
-      <td>5.0</td>
+      <td>0.0</td>
+      <td>16.326531</td>
+      <td>4.9</td>
+      <td>16.728330</td>
+      <td>81.968816</td>
+      <td>3.587772</td>
       <td>20.0</td>
-      <td>0.4</td>
     </tr>
   </tbody>
 </table>
