--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <h4 class="w3-xlarge">A Prediction Model</h4>
   <form action="{{url_for('copies')}}" method="post">
     <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Make Copies of Tables</button>
-  <form action="{{url_for('update')}}" method="post">
+  <form action="{{url_for('runScript')}}" method="post">
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Update Tables</button>
 </header>
 
