updated with GW36 data

--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -30,240 +30,240 @@
       <th>Dallas</th>
       <td>Leeds</td>
       <td>Defender</td>
-      <td>6.5</td>
-      <td>28.461538</td>
-      <td>5.2</td>
-      <td>26.431416</td>
-      <td>137.443361</td>
-      <td>14.126988</td>
+      <td>4.6</td>
+      <td>30.370370</td>
+      <td>5.4</td>
+      <td>27.523259</td>
+      <td>148.625601</td>
+      <td>12.726841</td>
       <td>1.0</td>
     </tr>
     <tr>
       <th>Alexander-Arnold</th>
       <td>Liverpool</td>
       <td>Defender</td>
-      <td>8.2</td>
-      <td>16.710526</td>
-      <td>7.6</td>
-      <td>18.755991</td>
-      <td>142.545531</td>
-      <td>12.466478</td>
+      <td>6.4</td>
+      <td>19.350649</td>
+      <td>7.7</td>
+      <td>20.986390</td>
+      <td>161.595206</td>
+      <td>11.871551</td>
       <td>2.0</td>
+    </tr>
+    <tr>
+      <th>Cancelo</th>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>4.5</td>
+      <td>24.310345</td>
+      <td>5.8</td>
+      <td>23.813156</td>
+      <td>138.116307</td>
+      <td>10.706950</td>
+      <td>3.0</td>
     </tr>
     <tr>
       <th>Wan-Bissaka</th>
       <td>Man Utd</td>
       <td>Defender</td>
-      <td>3.5</td>
-      <td>23.508772</td>
+      <td>3.6</td>
+      <td>24.912281</td>
       <td>5.7</td>
-      <td>22.927697</td>
-      <td>130.687874</td>
-      <td>10.508221</td>
-      <td>3.0</td>
+      <td>23.706562</td>
+      <td>135.127403</td>
+      <td>10.120097</td>
+      <td>4.0</td>
     </tr>
     <tr>
-      <th>Robertson</th>
-      <td>Liverpool</td>
+      <th>Digne</th>
+      <td>Everton</td>
       <td>Defender</td>
-      <td>4.0</td>
-      <td>18.169014</td>
-      <td>7.1</td>
-      <td>20.295372</td>
-      <td>144.097139</td>
-      <td>10.140032</td>
-      <td>4.0</td>
+      <td>5.8</td>
+      <td>18.064516</td>
+      <td>6.2</td>
+      <td>21.724257</td>
+      <td>134.690394</td>
+      <td>9.895582</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>Dunk</th>
       <td>Brighton</td>
       <td>Defender</td>
-      <td>4.2</td>
-      <td>24.081633</td>
-      <td>4.9</td>
-      <td>21.870256</td>
-      <td>107.164255</td>
-      <td>9.918247</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Dias</th>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>2.7</td>
-      <td>22.131148</td>
-      <td>6.1</td>
-      <td>22.326036</td>
-      <td>136.188818</td>
-      <td>9.901779</td>
+      <td>3.8</td>
+      <td>26.875000</td>
+      <td>4.8</td>
+      <td>21.976831</td>
+      <td>105.488790</td>
+      <td>9.320367</td>
       <td>6.0</td>
     </tr>
     <tr>
       <th>Evans</th>
       <td>Leicester</td>
       <td>Defender</td>
-      <td>5.5</td>
-      <td>17.678571</td>
+      <td>6.0</td>
+      <td>19.464286</td>
       <td>5.6</td>
-      <td>20.250510</td>
-      <td>113.402858</td>
-      <td>9.437955</td>
+      <td>19.877514</td>
+      <td>111.314081</td>
+      <td>9.256891</td>
       <td>7.0</td>
     </tr>
     <tr>
-      <th>Shaw</th>
-      <td>Man Utd</td>
+      <th>Robertson</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>3.2</td>
-      <td>22.407407</td>
-      <td>5.4</td>
-      <td>21.385365</td>
-      <td>115.480969</td>
-      <td>9.246239</td>
+      <td>2.8</td>
+      <td>19.436620</td>
+      <td>7.1</td>
+      <td>21.793208</td>
+      <td>154.731779</td>
+      <td>9.206945</td>
       <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Maguire</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>2.5</td>
-      <td>22.363636</td>
-      <td>5.5</td>
-      <td>22.297653</td>
-      <td>122.637093</td>
-      <td>9.136709</td>
-      <td>9.0</td>
     </tr>
     <tr>
       <th>Chilwell</th>
       <td>Chelsea</td>
       <td>Defender</td>
-      <td>3.5</td>
-      <td>20.344828</td>
-      <td>5.8</td>
-      <td>20.295642</td>
-      <td>117.714726</td>
-      <td>9.024261</td>
+      <td>4.0</td>
+      <td>21.355932</td>
+      <td>5.9</td>
+      <td>21.521841</td>
+      <td>126.978863</td>
+      <td>9.141704</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Cresswell</th>
+      <td>West Ham</td>
+      <td>Defender</td>
+      <td>1.5</td>
+      <td>25.357143</td>
+      <td>5.6</td>
+      <td>24.511388</td>
+      <td>137.263774</td>
+      <td>8.951236</td>
       <td>10.0</td>
     </tr>
     <tr>
       <th>Coufal</th>
       <td>West Ham</td>
       <td>Defender</td>
-      <td>3.5</td>
-      <td>22.340426</td>
-      <td>4.7</td>
-      <td>21.412954</td>
-      <td>100.640883</td>
-      <td>8.669062</td>
+      <td>3.2</td>
+      <td>24.166667</td>
+      <td>4.8</td>
+      <td>23.306005</td>
+      <td>111.868825</td>
+      <td>8.577783</td>
       <td>11.0</td>
-    </tr>
-    <tr>
-      <th>Cresswell</th>
-      <td>West Ham</td>
-      <td>Defender</td>
-      <td>0.2</td>
-      <td>23.859649</td>
-      <td>5.7</td>
-      <td>22.659152</td>
-      <td>129.157166</td>
-      <td>8.333475</td>
-      <td>12.0</td>
-    </tr>
-    <tr>
-      <th>Aina</th>
-      <td>Fulham</td>
-      <td>Defender</td>
-      <td>3.0</td>
-      <td>22.954545</td>
-      <td>4.4</td>
-      <td>21.736068</td>
-      <td>95.638699</td>
-      <td>8.241200</td>
-      <td>13.0</td>
-    </tr>
-    <tr>
-      <th>Coady</th>
-      <td>Wolves</td>
-      <td>Defender</td>
-      <td>3.5</td>
-      <td>19.800000</td>
-      <td>5.0</td>
-      <td>19.746894</td>
-      <td>98.734470</td>
-      <td>7.912607</td>
-      <td>14.0</td>
     </tr>
     <tr>
       <th>Targett</th>
       <td>Aston Villa</td>
       <td>Defender</td>
-      <td>1.0</td>
-      <td>24.000000</td>
+      <td>2.2</td>
+      <td>26.200000</td>
       <td>5.0</td>
-      <td>21.956736</td>
-      <td>109.783681</td>
-      <td>7.909761</td>
-      <td>15.0</td>
+      <td>22.746999</td>
+      <td>113.734997</td>
+      <td>8.499277</td>
+      <td>12.0</td>
     </tr>
     <tr>
-      <th>Mings</th>
-      <td>Aston Villa</td>
+      <th>Godfrey</th>
+      <td>Everton</td>
       <td>Defender</td>
-      <td>1.5</td>
-      <td>21.296296</td>
-      <td>5.4</td>
-      <td>21.296115</td>
-      <td>114.999021</td>
-      <td>7.806476</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Lindelöf</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>3.0</td>
-      <td>20.416667</td>
-      <td>4.8</td>
-      <td>20.222586</td>
-      <td>97.068412</td>
-      <td>7.655958</td>
-      <td>17.0</td>
-    </tr>
-    <tr>
-      <th>Castagne</th>
-      <td>Leicester</td>
-      <td>Defender</td>
-      <td>5.5</td>
-      <td>15.344828</td>
-      <td>5.8</td>
-      <td>15.448968</td>
-      <td>89.604013</td>
-      <td>7.615912</td>
-      <td>18.0</td>
+      <td>6.0</td>
+      <td>18.431373</td>
+      <td>5.1</td>
+      <td>19.153085</td>
+      <td>97.680735</td>
+      <td>8.363320</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>Keane</th>
       <td>Everton</td>
       <td>Defender</td>
-      <td>2.0</td>
-      <td>20.784314</td>
-      <td>5.1</td>
-      <td>21.050719</td>
-      <td>107.358665</td>
-      <td>7.614511</td>
-      <td>19.0</td>
+      <td>2.8</td>
+      <td>24.000000</td>
+      <td>5.0</td>
+      <td>21.982678</td>
+      <td>109.913390</td>
+      <td>8.182895</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Tarkowski</th>
+      <td>Burnley</td>
+      <td>Defender</td>
+      <td>4.2</td>
+      <td>20.000000</td>
+      <td>5.3</td>
+      <td>20.404575</td>
+      <td>108.144248</td>
+      <td>8.055443</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Shaw</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>2.4</td>
+      <td>22.363636</td>
+      <td>5.5</td>
+      <td>21.958509</td>
+      <td>120.771798</td>
+      <td>8.041121</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>James</th>
       <td>Chelsea</td>
       <td>Defender</td>
-      <td>3.0</td>
-      <td>19.800000</td>
-      <td>5.0</td>
-      <td>19.703578</td>
-      <td>98.517892</td>
-      <td>7.570094</td>
+      <td>3.6</td>
+      <td>21.372549</td>
+      <td>5.1</td>
+      <td>21.371611</td>
+      <td>108.995218</td>
+      <td>8.032296</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Konsa</th>
+      <td>Aston Villa</td>
+      <td>Defender</td>
+      <td>2.2</td>
+      <td>24.468085</td>
+      <td>4.7</td>
+      <td>23.791593</td>
+      <td>111.820487</td>
+      <td>7.992283</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Dias</th>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>0.8</td>
+      <td>22.666667</td>
+      <td>6.0</td>
+      <td>23.158973</td>
+      <td>138.953836</td>
+      <td>7.925410</td>
+      <td>19.0</td>
+    </tr>
+    <tr>
+      <th>Alioski</th>
+      <td>Leeds</td>
+      <td>Defender</td>
+      <td>4.4</td>
+      <td>23.720930</td>
+      <td>4.3</td>
+      <td>18.646977</td>
+      <td>80.182002</td>
+      <td>7.757758</td>
       <td>20.0</td>
     </tr>
   </tbody>
