--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -30,240 +30,240 @@
       <th>Kane</th>
       <td>Spurs</td>
       <td>Forward</td>
-      <td>6.8</td>
-      <td>18.474576</td>
+      <td>3.0</td>
+      <td>19.491525</td>
       <td>11.8</td>
-      <td>19.633031</td>
-      <td>231.669767</td>
-      <td>13.694511</td>
+      <td>20.192039</td>
+      <td>238.266054</td>
+      <td>10.979313</td>
       <td>1.0</td>
     </tr>
     <tr>
-      <th>Watkins</th>
-      <td>Aston Villa</td>
+      <th>Vardy</th>
+      <td>Leicester</td>
       <td>Forward</td>
-      <td>6.2</td>
-      <td>21.969697</td>
-      <td>6.6</td>
-      <td>20.439811</td>
-      <td>134.902755</td>
-      <td>10.598481</td>
+      <td>4.2</td>
+      <td>16.862745</td>
+      <td>10.2</td>
+      <td>21.763709</td>
+      <td>221.989829</td>
+      <td>10.340902</td>
       <td>2.0</td>
     </tr>
     <tr>
       <th>Bamford</th>
       <td>Leeds</td>
       <td>Forward</td>
-      <td>2.2</td>
-      <td>25.384615</td>
+      <td>2.8</td>
+      <td>27.076923</td>
       <td>6.5</td>
-      <td>23.013281</td>
-      <td>149.586326</td>
-      <td>10.328486</td>
+      <td>25.308060</td>
+      <td>164.502393</td>
+      <td>10.326824</td>
       <td>3.0</td>
     </tr>
     <tr>
-      <th>Wood</th>
-      <td>Burnley</td>
+      <th>Watkins</th>
+      <td>Aston Villa</td>
       <td>Forward</td>
-      <td>9.2</td>
-      <td>19.047619</td>
-      <td>6.3</td>
-      <td>17.541424</td>
-      <td>110.510974</td>
-      <td>10.154277</td>
+      <td>3.7</td>
+      <td>24.531250</td>
+      <td>6.4</td>
+      <td>24.032817</td>
+      <td>153.810030</td>
+      <td>9.744262</td>
       <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Vardy</th>
-      <td>Leicester</td>
-      <td>Forward</td>
-      <td>4.0</td>
-      <td>15.825243</td>
-      <td>10.3</td>
-      <td>17.425753</td>
-      <td>179.485260</td>
-      <td>9.460474</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Ings</th>
-      <td>Southampton</td>
-      <td>Forward</td>
-      <td>6.3</td>
-      <td>13.571429</td>
-      <td>8.4</td>
-      <td>14.735387</td>
-      <td>123.777252</td>
-      <td>7.632178</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Iheanacho</th>
-      <td>Leicester</td>
-      <td>Forward</td>
-      <td>8.2</td>
-      <td>14.193548</td>
-      <td>6.2</td>
-      <td>14.433394</td>
-      <td>89.487044</td>
-      <td>7.351567</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Lacazette</th>
-      <td>Arsenal</td>
-      <td>Forward</td>
-      <td>4.2</td>
-      <td>15.000000</td>
-      <td>8.4</td>
-      <td>15.439491</td>
-      <td>129.691721</td>
-      <td>7.307119</td>
-      <td>8.0</td>
     </tr>
     <tr>
       <th>Calvert-Lewin</th>
       <td>Everton</td>
       <td>Forward</td>
-      <td>1.0</td>
-      <td>18.666667</td>
-      <td>7.5</td>
-      <td>18.548812</td>
-      <td>139.116087</td>
-      <td>7.283821</td>
-      <td>9.0</td>
+      <td>4.6</td>
+      <td>21.184211</td>
+      <td>7.6</td>
+      <td>21.697433</td>
+      <td>164.900490</td>
+      <td>9.716866</td>
+      <td>5.0</td>
+    </tr>
+    <tr>
+      <th>Wood</th>
+      <td>Burnley</td>
+      <td>Forward</td>
+      <td>7.2</td>
+      <td>20.615385</td>
+      <td>6.5</td>
+      <td>19.703755</td>
+      <td>128.074406</td>
+      <td>9.686112</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>Adams</th>
       <td>Southampton</td>
       <td>Forward</td>
-      <td>1.3</td>
-      <td>19.310345</td>
-      <td>5.8</td>
-      <td>18.593499</td>
-      <td>107.842293</td>
-      <td>6.369610</td>
-      <td>10.0</td>
+      <td>5.2</td>
+      <td>23.859649</td>
+      <td>5.7</td>
+      <td>22.201383</td>
+      <td>126.547884</td>
+      <td>9.418080</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>Wilson</th>
       <td>Newcastle</td>
       <td>Forward</td>
-      <td>0.8</td>
-      <td>18.307692</td>
+      <td>4.0</td>
+      <td>20.615385</td>
       <td>6.5</td>
-      <td>17.284956</td>
-      <td>112.352217</td>
-      <td>6.005987</td>
+      <td>19.808526</td>
+      <td>128.755418</td>
+      <td>7.942834</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>Firmino</th>
+      <td>Liverpool</td>
+      <td>Forward</td>
+      <td>4.4</td>
+      <td>14.222222</td>
+      <td>9.0</td>
+      <td>17.158924</td>
+      <td>154.430320</td>
+      <td>7.321747</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Ings</th>
+      <td>Southampton</td>
+      <td>Forward</td>
+      <td>4.0</td>
+      <td>15.238095</td>
+      <td>8.4</td>
+      <td>17.101260</td>
+      <td>143.650588</td>
+      <td>6.996153</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>Iheanacho</th>
+      <td>Leicester</td>
+      <td>Forward</td>
+      <td>6.4</td>
+      <td>16.451613</td>
+      <td>6.2</td>
+      <td>14.832433</td>
+      <td>91.961084</td>
+      <td>6.815438</td>
       <td>11.0</td>
     </tr>
     <tr>
-      <th>Maupay</th>
-      <td>Brighton</td>
+      <th>Benteke</th>
+      <td>Crystal Palace</td>
       <td>Forward</td>
-      <td>1.8</td>
-      <td>17.333333</td>
-      <td>6.0</td>
-      <td>17.411775</td>
-      <td>104.470652</td>
-      <td>5.867801</td>
+      <td>5.2</td>
+      <td>18.181818</td>
+      <td>5.5</td>
+      <td>17.523691</td>
+      <td>96.380298</td>
+      <td>6.785077</td>
       <td>12.0</td>
     </tr>
     <tr>
       <th>Richarlison</th>
       <td>Everton</td>
       <td>Forward</td>
-      <td>2.8</td>
-      <td>13.461538</td>
+      <td>2.6</td>
+      <td>14.487179</td>
       <td>7.8</td>
-      <td>15.585766</td>
-      <td>121.568973</td>
-      <td>5.845108</td>
+      <td>20.111969</td>
+      <td>156.873357</td>
+      <td>6.487234</td>
       <td>13.0</td>
+    </tr>
+    <tr>
+      <th>Antonio</th>
+      <td>West Ham</td>
+      <td>Forward</td>
+      <td>4.2</td>
+      <td>16.461538</td>
+      <td>6.5</td>
+      <td>15.802799</td>
+      <td>102.718193</td>
+      <td>5.985842</td>
+      <td>14.0</td>
     </tr>
     <tr>
       <th>Werner</th>
       <td>Chelsea</td>
       <td>Forward</td>
-      <td>2.8</td>
-      <td>12.173913</td>
+      <td>3.2</td>
+      <td>13.260870</td>
       <td>9.2</td>
-      <td>13.845402</td>
-      <td>127.377700</td>
-      <td>5.684268</td>
-      <td>14.0</td>
-    </tr>
-    <tr>
-      <th>Firmino</th>
-      <td>Liverpool</td>
-      <td>Forward</td>
-      <td>1.8</td>
-      <td>12.111111</td>
-      <td>9.0</td>
-      <td>15.270532</td>
-      <td>137.434788</td>
-      <td>5.592545</td>
+      <td>15.114731</td>
+      <td>139.055526</td>
+      <td>5.847718</td>
       <td>15.0</td>
     </tr>
     <tr>
-      <th>Callum Robinson</th>
-      <td>West Brom</td>
+      <th>Welbeck</th>
+      <td>Brighton</td>
       <td>Forward</td>
+      <td>5.4</td>
+      <td>16.000000</td>
       <td>5.5</td>
-      <td>14.230769</td>
-      <td>5.2</td>
-      <td>13.374970</td>
-      <td>69.549842</td>
-      <td>5.279303</td>
+      <td>15.219420</td>
+      <td>83.706808</td>
+      <td>5.845291</td>
       <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Jesus</th>
-      <td>Man City</td>
-      <td>Forward</td>
-      <td>3.7</td>
-      <td>10.869565</td>
-      <td>9.2</td>
-      <td>12.354109</td>
-      <td>113.657799</td>
-      <td>5.163561</td>
-      <td>17.0</td>
     </tr>
     <tr>
       <th>McGoldrick</th>
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>3.2</td>
-      <td>15.961538</td>
+      <td>17.115385</td>
       <td>5.2</td>
-      <td>15.245874</td>
-      <td>79.278547</td>
-      <td>5.104413</td>
+      <td>15.569183</td>
+      <td>80.959754</td>
+      <td>4.838682</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Lacazette</th>
+      <td>Arsenal</td>
+      <td>Forward</td>
+      <td>0.8</td>
+      <td>15.238095</td>
+      <td>8.4</td>
+      <td>15.378469</td>
+      <td>129.179142</td>
+      <td>4.713600</td>
       <td>18.0</td>
     </tr>
     <tr>
-      <th>Cavani</th>
-      <td>Man Utd</td>
+      <th>Maupay</th>
+      <td>Brighton</td>
       <td>Forward</td>
-      <td>4.8</td>
-      <td>10.000000</td>
-      <td>7.9</td>
-      <td>10.736495</td>
-      <td>84.818313</td>
-      <td>4.264807</td>
+      <td>0.8</td>
+      <td>17.796610</td>
+      <td>5.9</td>
+      <td>18.247699</td>
+      <td>107.661425</td>
+      <td>4.650447</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Benteke</th>
-      <td>Crystal Palace</td>
+      <th>Jesus</th>
+      <td>Man City</td>
       <td>Forward</td>
-      <td>4.0</td>
-      <td>13.818182</td>
-      <td>5.5</td>
-      <td>11.414605</td>
-      <td>62.780326</td>
-      <td>4.168221</td>
+      <td>2.2</td>
+      <td>11.868132</td>
+      <td>9.1</td>
+      <td>13.552196</td>
+      <td>123.324982</td>
+      <td>4.353023</td>
       <td>20.0</td>
     </tr>
   </tbody>
