--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -27,243 +27,243 @@
   </thead>
   <tbody>
     <tr>
-      <th>Salah</th>
-      <td>Liverpool</td>
+      <th>Son</th>
+      <td>Spurs</td>
       <td>Midfielder</td>
-      <td>6.2</td>
-      <td>15.793651</td>
-      <td>12.6</td>
-      <td>22.276948</td>
-      <td>280.689539</td>
-      <td>15.658361</td>
+      <td>8.0</td>
+      <td>22.783505</td>
+      <td>9.7</td>
+      <td>21.975934</td>
+      <td>213.166556</td>
+      <td>14.759708</td>
       <td>1.0</td>
     </tr>
     <tr>
-      <th>Pereira</th>
-      <td>West Brom</td>
+      <th>Salah</th>
+      <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>10.5</td>
-      <td>24.000000</td>
-      <td>5.5</td>
-      <td>22.130179</td>
-      <td>121.715984</td>
-      <td>13.597813</td>
+      <td>6.6</td>
+      <td>17.343750</td>
+      <td>12.8</td>
+      <td>19.637354</td>
+      <td>251.358136</td>
+      <td>13.956444</td>
       <td>2.0</td>
     </tr>
     <tr>
       <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
+      <td>4.8</td>
+      <td>21.052632</td>
+      <td>11.4</td>
+      <td>22.007039</td>
+      <td>250.880242</td>
+      <td>13.862704</td>
       <td>3.0</td>
-      <td>19.217391</td>
-      <td>11.5</td>
-      <td>20.630431</td>
-      <td>237.249953</td>
-      <td>12.983139</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Son</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>5.0</td>
-      <td>20.947368</td>
-      <td>9.5</td>
-      <td>20.865946</td>
-      <td>198.226485</td>
-      <td>12.924676</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Rashford</th>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>5.0</td>
-      <td>16.666667</td>
-      <td>9.6</td>
-      <td>18.459978</td>
-      <td>177.215792</td>
-      <td>10.757970</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Bowen</th>
-      <td>West Ham</td>
-      <td>Midfielder</td>
-      <td>6.2</td>
-      <td>21.500000</td>
-      <td>6.0</td>
-      <td>20.159533</td>
-      <td>120.957195</td>
-      <td>10.414264</td>
-      <td>6.0</td>
     </tr>
     <tr>
       <th>Harrison</th>
       <td>Leeds</td>
       <td>Midfielder</td>
-      <td>5.2</td>
-      <td>24.444444</td>
-      <td>5.4</td>
-      <td>18.566247</td>
-      <td>100.257736</td>
-      <td>9.819898</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Mount</th>
-      <td>Chelsea</td>
-      <td>Midfielder</td>
-      <td>4.5</td>
-      <td>18.493151</td>
-      <td>7.3</td>
-      <td>19.422063</td>
-      <td>141.781061</td>
-      <td>9.478165</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Soucek</th>
-      <td>West Ham</td>
-      <td>Midfielder</td>
-      <td>2.2</td>
-      <td>24.716981</td>
-      <td>5.3</td>
-      <td>22.992976</td>
-      <td>121.862772</td>
-      <td>9.149620</td>
-      <td>9.0</td>
+      <td>5.6</td>
+      <td>27.636364</td>
+      <td>5.5</td>
+      <td>25.429174</td>
+      <td>139.860458</td>
+      <td>11.739309</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>Ward-Prowse</th>
       <td>Southampton</td>
       <td>Midfielder</td>
-      <td>2.0</td>
-      <td>22.758621</td>
-      <td>5.8</td>
-      <td>23.245164</td>
-      <td>134.821953</td>
-      <td>9.023699</td>
-      <td>10.0</td>
+      <td>5.0</td>
+      <td>25.762712</td>
+      <td>5.9</td>
+      <td>25.795697</td>
+      <td>152.194613</td>
+      <td>11.359625</td>
+      <td>5.0</td>
     </tr>
     <tr>
-      <th>Gündogan</th>
-      <td>Man City</td>
+      <th>Pereira</th>
+      <td>West Brom</td>
       <td>Midfielder</td>
-      <td>0.7</td>
-      <td>24.827586</td>
+      <td>5.2</td>
+      <td>27.037037</td>
+      <td>5.4</td>
+      <td>25.444822</td>
+      <td>137.402041</td>
+      <td>11.240187</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Rashford</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>4.6</td>
+      <td>18.020833</td>
+      <td>9.6</td>
+      <td>20.081551</td>
+      <td>192.782887</td>
+      <td>10.627205</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Eze</th>
+      <td>Crystal Palace</td>
+      <td>Midfielder</td>
+      <td>7.0</td>
+      <td>21.551724</td>
       <td>5.8</td>
-      <td>22.249473</td>
-      <td>129.046943</td>
-      <td>8.650211</td>
-      <td>11.0</td>
+      <td>21.601686</td>
+      <td>125.289780</td>
+      <td>10.355697</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>Mané</th>
       <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>4.2</td>
-      <td>11.709402</td>
+      <td>5.4</td>
+      <td>13.162393</td>
       <td>11.7</td>
-      <td>14.520509</td>
-      <td>169.889961</td>
-      <td>8.535812</td>
+      <td>16.365927</td>
+      <td>191.481349</td>
+      <td>9.740037</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Gündogan</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>1.8</td>
+      <td>26.785714</td>
+      <td>5.6</td>
+      <td>25.128919</td>
+      <td>140.721945</td>
+      <td>9.265294</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>Bale</th>
+      <td>Spurs</td>
+      <td>Midfielder</td>
+      <td>9.8</td>
+      <td>10.760870</td>
+      <td>9.2</td>
+      <td>12.553852</td>
+      <td>115.495434</td>
+      <td>8.725850</td>
+      <td>11.0</td>
+    </tr>
+    <tr>
+      <th>Soucek</th>
+      <td>West Ham</td>
+      <td>Midfielder</td>
+      <td>1.8</td>
+      <td>26.153846</td>
+      <td>5.2</td>
+      <td>24.916123</td>
+      <td>129.563839</td>
+      <td>8.653489</td>
       <td>12.0</td>
     </tr>
     <tr>
-      <th>Lingard</th>
-      <td>West Ham</td>
+      <th>Westwood</th>
+      <td>Burnley</td>
       <td>Midfielder</td>
-      <td>8.8</td>
-      <td>13.787879</td>
-      <td>6.6</td>
-      <td>14.232066</td>
-      <td>93.931633</td>
-      <td>8.441063</td>
+      <td>5.4</td>
+      <td>20.377358</td>
+      <td>5.3</td>
+      <td>21.429486</td>
+      <td>113.576275</td>
+      <td>8.616033</td>
       <td>13.0</td>
     </tr>
     <tr>
-      <th>Greenwood</th>
-      <td>Man Utd</td>
+      <th>Mount</th>
+      <td>Chelsea</td>
       <td>Midfielder</td>
-      <td>8.8</td>
-      <td>11.971831</td>
-      <td>7.1</td>
-      <td>14.805866</td>
-      <td>105.121646</td>
-      <td>8.392691</td>
+      <td>2.8</td>
+      <td>19.589041</td>
+      <td>7.3</td>
+      <td>20.923710</td>
+      <td>152.743082</td>
+      <td>8.391244</td>
       <td>14.0</td>
     </tr>
     <tr>
       <th>Sterling</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>2.0</td>
-      <td>12.432432</td>
-      <td>11.1</td>
-      <td>16.398244</td>
-      <td>182.020508</td>
-      <td>8.037006</td>
+      <td>2.8</td>
+      <td>13.545455</td>
+      <td>11.0</td>
+      <td>17.473304</td>
+      <td>192.206341</td>
+      <td>8.313914</td>
       <td>15.0</td>
     </tr>
     <tr>
-      <th>Foden</th>
+      <th>De Bruyne</th>
       <td>Man City</td>
       <td>Midfielder</td>
-      <td>3.7</td>
-      <td>19.666667</td>
-      <td>6.0</td>
-      <td>18.114513</td>
-      <td>108.687076</td>
-      <td>7.939463</td>
+      <td>0.0</td>
+      <td>10.847458</td>
+      <td>11.8</td>
+      <td>21.430063</td>
+      <td>252.874743</td>
+      <td>8.301564</td>
       <td>16.0</td>
     </tr>
     <tr>
-      <th>Neto</th>
-      <td>Wolves</td>
+      <th>Højbjerg</th>
+      <td>Spurs</td>
       <td>Midfielder</td>
-      <td>1.5</td>
-      <td>22.142857</td>
-      <td>5.6</td>
-      <td>20.793106</td>
-      <td>116.441396</td>
-      <td>7.765723</td>
+      <td>5.0</td>
+      <td>21.224490</td>
+      <td>4.9</td>
+      <td>21.414904</td>
+      <td>104.933030</td>
+      <td>8.264198</td>
       <td>17.0</td>
     </tr>
     <tr>
-      <th>Sigurdsson</th>
-      <td>Everton</td>
+      <th>Greenwood</th>
+      <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>5.5</td>
-      <td>15.797101</td>
-      <td>6.9</td>
-      <td>15.488638</td>
-      <td>106.871605</td>
-      <td>7.736619</td>
+      <td>7.4</td>
+      <td>14.444444</td>
+      <td>7.2</td>
+      <td>15.073565</td>
+      <td>108.529669</td>
+      <td>8.009343</td>
       <td>18.0</td>
-    </tr>
-    <tr>
-      <th>Westwood</th>
-      <td>Burnley</td>
-      <td>Midfielder</td>
-      <td>4.5</td>
-      <td>17.924528</td>
-      <td>5.3</td>
-      <td>19.697198</td>
-      <td>104.395148</td>
-      <td>7.691792</td>
-      <td>19.0</td>
     </tr>
     <tr>
       <th>Tielemans</th>
       <td>Leicester</td>
       <td>Midfielder</td>
-      <td>2.2</td>
-      <td>18.750000</td>
+      <td>2.8</td>
+      <td>20.156250</td>
       <td>6.4</td>
-      <td>19.897687</td>
-      <td>127.345195</td>
-      <td>7.635524</td>
+      <td>21.082968</td>
+      <td>134.930992</td>
+      <td>7.841222</td>
+      <td>19.0</td>
+    </tr>
+    <tr>
+      <th>Zaha</th>
+      <td>Crystal Palace</td>
+      <td>Midfielder</td>
+      <td>3.8</td>
+      <td>18.333333</td>
+      <td>7.2</td>
+      <td>17.900622</td>
+      <td>128.884478</td>
+      <td>7.708291</td>
       <td>20.0</td>
     </tr>
   </tbody>
