Updating with GW37 data

--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -27,195 +27,195 @@
   </thead>
   <tbody>
     <tr>
-      <th>Kane</th>
-      <td>Spurs</td>
-      <td>Forward</td>
-      <td>3.0</td>
-      <td>19.491525</td>
-      <td>11.8</td>
-      <td>20.192039</td>
-      <td>238.266054</td>
-      <td>10.979313</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
-      <th>Vardy</th>
-      <td>Leicester</td>
-      <td>Forward</td>
-      <td>4.2</td>
-      <td>16.862745</td>
-      <td>10.2</td>
-      <td>21.763709</td>
-      <td>221.989829</td>
-      <td>10.340902</td>
-      <td>2.0</td>
-    </tr>
-    <tr>
       <th>Bamford</th>
       <td>Leeds</td>
       <td>Forward</td>
-      <td>2.8</td>
-      <td>27.076923</td>
+      <td>4.8</td>
+      <td>28.923077</td>
       <td>6.5</td>
-      <td>25.308060</td>
-      <td>164.502393</td>
-      <td>10.326824</td>
-      <td>3.0</td>
+      <td>27.053280</td>
+      <td>175.846318</td>
+      <td>11.871776</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <th>Kane</th>
+      <td>Spurs</td>
+      <td>Forward</td>
+      <td>2.8</td>
+      <td>19.495798</td>
+      <td>11.9</td>
+      <td>20.360589</td>
+      <td>242.291008</td>
+      <td>10.587210</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <th>Watkins</th>
       <td>Aston Villa</td>
       <td>Forward</td>
-      <td>3.7</td>
-      <td>24.531250</td>
+      <td>4.4</td>
+      <td>25.937500</td>
       <td>6.4</td>
-      <td>24.032817</td>
-      <td>153.810030</td>
-      <td>9.744262</td>
-      <td>4.0</td>
+      <td>25.196920</td>
+      <td>161.260287</td>
+      <td>10.359373</td>
+      <td>3.0</td>
     </tr>
     <tr>
-      <th>Calvert-Lewin</th>
-      <td>Everton</td>
+      <th>Firmino</th>
+      <td>Liverpool</td>
       <td>Forward</td>
-      <td>4.6</td>
-      <td>21.184211</td>
-      <td>7.6</td>
-      <td>21.697433</td>
-      <td>164.900490</td>
-      <td>9.716866</td>
-      <td>5.0</td>
+      <td>5.8</td>
+      <td>14.945055</td>
+      <td>9.1</td>
+      <td>22.367069</td>
+      <td>203.540332</td>
+      <td>9.642110</td>
+      <td>4.0</td>
     </tr>
     <tr>
       <th>Wood</th>
       <td>Burnley</td>
       <td>Forward</td>
       <td>7.2</td>
-      <td>20.615385</td>
+      <td>20.923077</td>
       <td>6.5</td>
-      <td>19.703755</td>
-      <td>128.074406</td>
-      <td>9.686112</td>
+      <td>19.943351</td>
+      <td>129.631780</td>
+      <td>9.429835</td>
+      <td>5.0</td>
+    </tr>
+    <tr>
+      <th>Calvert-Lewin</th>
+      <td>Everton</td>
+      <td>Forward</td>
+      <td>4.2</td>
+      <td>21.447368</td>
+      <td>7.6</td>
+      <td>21.563596</td>
+      <td>163.883326</td>
+      <td>9.147734</td>
       <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Vardy</th>
+      <td>Leicester</td>
+      <td>Forward</td>
+      <td>3.8</td>
+      <td>17.058824</td>
+      <td>10.2</td>
+      <td>19.054352</td>
+      <td>194.354386</td>
+      <td>8.817880</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>Adams</th>
       <td>Southampton</td>
       <td>Forward</td>
-      <td>5.2</td>
-      <td>23.859649</td>
+      <td>4.5</td>
+      <td>24.035088</td>
       <td>5.7</td>
-      <td>22.201383</td>
-      <td>126.547884</td>
-      <td>9.418080</td>
-      <td>7.0</td>
+      <td>22.702601</td>
+      <td>129.404827</td>
+      <td>8.806338</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>Richarlison</th>
+      <td>Everton</td>
+      <td>Forward</td>
+      <td>3.7</td>
+      <td>15.844156</td>
+      <td>7.7</td>
+      <td>21.426864</td>
+      <td>164.986850</td>
+      <td>7.426870</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>Wilson</th>
       <td>Newcastle</td>
       <td>Forward</td>
-      <td>4.0</td>
+      <td>3.2</td>
       <td>20.615385</td>
       <td>6.5</td>
-      <td>19.808526</td>
-      <td>128.755418</td>
-      <td>7.942834</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Firmino</th>
-      <td>Liverpool</td>
-      <td>Forward</td>
-      <td>4.4</td>
-      <td>14.222222</td>
-      <td>9.0</td>
-      <td>17.158924</td>
-      <td>154.430320</td>
-      <td>7.321747</td>
-      <td>9.0</td>
-    </tr>
-    <tr>
-      <th>Ings</th>
-      <td>Southampton</td>
-      <td>Forward</td>
-      <td>4.0</td>
-      <td>15.238095</td>
-      <td>8.4</td>
-      <td>17.101260</td>
-      <td>143.650588</td>
-      <td>6.996153</td>
+      <td>19.852193</td>
+      <td>129.039255</td>
+      <td>7.188111</td>
       <td>10.0</td>
     </tr>
     <tr>
       <th>Iheanacho</th>
       <td>Leicester</td>
       <td>Forward</td>
-      <td>6.4</td>
-      <td>16.451613</td>
+      <td>6.3</td>
+      <td>17.419355</td>
       <td>6.2</td>
-      <td>14.832433</td>
-      <td>91.961084</td>
-      <td>6.815438</td>
+      <td>16.604838</td>
+      <td>102.949997</td>
+      <td>7.094367</td>
       <td>11.0</td>
     </tr>
     <tr>
       <th>Benteke</th>
       <td>Crystal Palace</td>
       <td>Forward</td>
-      <td>5.2</td>
-      <td>18.181818</td>
+      <td>5.3</td>
+      <td>19.272727</td>
       <td>5.5</td>
-      <td>17.523691</td>
-      <td>96.380298</td>
-      <td>6.785077</td>
+      <td>18.528449</td>
+      <td>101.906468</td>
+      <td>7.016851</td>
       <td>12.0</td>
-    </tr>
-    <tr>
-      <th>Richarlison</th>
-      <td>Everton</td>
-      <td>Forward</td>
-      <td>2.6</td>
-      <td>14.487179</td>
-      <td>7.8</td>
-      <td>20.111969</td>
-      <td>156.873357</td>
-      <td>6.487234</td>
-      <td>13.0</td>
     </tr>
     <tr>
       <th>Antonio</th>
       <td>West Ham</td>
       <td>Forward</td>
-      <td>4.2</td>
-      <td>16.461538</td>
-      <td>6.5</td>
-      <td>15.802799</td>
-      <td>102.718193</td>
-      <td>5.985842</td>
+      <td>5.2</td>
+      <td>17.575758</td>
+      <td>6.6</td>
+      <td>16.606412</td>
+      <td>109.602321</td>
+      <td>6.777411</td>
+      <td>13.0</td>
+    </tr>
+    <tr>
+      <th>Ings</th>
+      <td>Southampton</td>
+      <td>Forward</td>
+      <td>3.5</td>
+      <td>15.357143</td>
+      <td>8.4</td>
+      <td>16.606660</td>
+      <td>139.495942</td>
+      <td>6.309952</td>
       <td>14.0</td>
     </tr>
     <tr>
       <th>Werner</th>
       <td>Chelsea</td>
       <td>Forward</td>
-      <td>3.2</td>
-      <td>13.260870</td>
+      <td>3.5</td>
+      <td>13.804348</td>
       <td>9.2</td>
-      <td>15.114731</td>
-      <td>139.055526</td>
-      <td>5.847718</td>
+      <td>15.239328</td>
+      <td>140.201816</td>
+      <td>5.920980</td>
       <td>15.0</td>
     </tr>
     <tr>
       <th>Welbeck</th>
       <td>Brighton</td>
       <td>Forward</td>
-      <td>5.4</td>
-      <td>16.000000</td>
+      <td>4.7</td>
+      <td>16.181818</td>
       <td>5.5</td>
-      <td>15.219420</td>
-      <td>83.706808</td>
-      <td>5.845291</td>
+      <td>15.726843</td>
+      <td>86.497635</td>
+      <td>5.341027</td>
       <td>16.0</td>
     </tr>
     <tr>
@@ -223,47 +223,47 @@
       <td>Sheffield Utd</td>
       <td>Forward</td>
       <td>3.2</td>
-      <td>17.115385</td>
+      <td>17.500000</td>
       <td>5.2</td>
-      <td>15.569183</td>
-      <td>80.959754</td>
-      <td>4.838682</td>
+      <td>16.222270</td>
+      <td>84.355805</td>
+      <td>4.815697</td>
       <td>17.0</td>
     </tr>
     <tr>
-      <th>Lacazette</th>
-      <td>Arsenal</td>
+      <th>Rodrigo</th>
+      <td>Leeds</td>
       <td>Forward</td>
-      <td>0.8</td>
-      <td>15.238095</td>
-      <td>8.4</td>
-      <td>15.378469</td>
-      <td>129.179142</td>
-      <td>4.713600</td>
+      <td>5.0</td>
+      <td>14.210526</td>
+      <td>5.7</td>
+      <td>14.164253</td>
+      <td>80.736242</td>
+      <td>4.777763</td>
       <td>18.0</td>
     </tr>
     <tr>
-      <th>Maupay</th>
-      <td>Brighton</td>
+      <th>Cavani</th>
+      <td>Man Utd</td>
       <td>Forward</td>
-      <td>0.8</td>
-      <td>17.796610</td>
-      <td>5.9</td>
-      <td>18.247699</td>
-      <td>107.661425</td>
-      <td>4.650447</td>
+      <td>4.2</td>
+      <td>12.375000</td>
+      <td>8.0</td>
+      <td>13.209961</td>
+      <td>105.679689</td>
+      <td>4.722685</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Jesus</th>
-      <td>Man City</td>
+      <th>Decordova-Reid</th>
+      <td>Fulham</td>
       <td>Forward</td>
-      <td>2.2</td>
-      <td>11.868132</td>
-      <td>9.1</td>
-      <td>13.552196</td>
-      <td>123.324982</td>
-      <td>4.353023</td>
+      <td>3.5</td>
+      <td>16.226415</td>
+      <td>5.3</td>
+      <td>15.865115</td>
+      <td>84.085111</td>
+      <td>4.627777</td>
       <td>20.0</td>
     </tr>
   </tbody>
