--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -30,240 +30,240 @@
       <th>Dallas</th>
       <td>Leeds</td>
       <td>Defender</td>
-      <td>4.6</td>
-      <td>30.370370</td>
       <td>5.4</td>
-      <td>27.523259</td>
-      <td>148.625601</td>
-      <td>12.726841</td>
+      <td>31.296296</td>
+      <td>5.4</td>
+      <td>25.715521</td>
+      <td>138.863815</td>
+      <td>12.789683</td>
       <td>1.0</td>
-    </tr>
-    <tr>
-      <th>Alexander-Arnold</th>
-      <td>Liverpool</td>
-      <td>Defender</td>
-      <td>6.4</td>
-      <td>19.350649</td>
-      <td>7.7</td>
-      <td>20.986390</td>
-      <td>161.595206</td>
-      <td>11.871551</td>
-      <td>2.0</td>
-    </tr>
-    <tr>
-      <th>Cancelo</th>
-      <td>Man City</td>
-      <td>Defender</td>
-      <td>4.5</td>
-      <td>24.310345</td>
-      <td>5.8</td>
-      <td>23.813156</td>
-      <td>138.116307</td>
-      <td>10.706950</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Wan-Bissaka</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>3.6</td>
-      <td>24.912281</td>
-      <td>5.7</td>
-      <td>23.706562</td>
-      <td>135.127403</td>
-      <td>10.120097</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Digne</th>
-      <td>Everton</td>
-      <td>Defender</td>
-      <td>5.8</td>
-      <td>18.064516</td>
-      <td>6.2</td>
-      <td>21.724257</td>
-      <td>134.690394</td>
-      <td>9.895582</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Dunk</th>
-      <td>Brighton</td>
-      <td>Defender</td>
-      <td>3.8</td>
-      <td>26.875000</td>
-      <td>4.8</td>
-      <td>21.976831</td>
-      <td>105.488790</td>
-      <td>9.320367</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Evans</th>
-      <td>Leicester</td>
-      <td>Defender</td>
-      <td>6.0</td>
-      <td>19.464286</td>
-      <td>5.6</td>
-      <td>19.877514</td>
-      <td>111.314081</td>
-      <td>9.256891</td>
-      <td>7.0</td>
     </tr>
     <tr>
       <th>Robertson</th>
       <td>Liverpool</td>
       <td>Defender</td>
-      <td>2.8</td>
-      <td>19.436620</td>
-      <td>7.1</td>
-      <td>21.793208</td>
-      <td>154.731779</td>
-      <td>9.206945</td>
-      <td>8.0</td>
+      <td>5.4</td>
+      <td>21.250000</td>
+      <td>7.2</td>
+      <td>23.627876</td>
+      <td>170.120709</td>
+      <td>11.885334</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <th>Alexander-Arnold</th>
+      <td>Liverpool</td>
+      <td>Defender</td>
+      <td>6.0</td>
+      <td>20.129870</td>
+      <td>7.7</td>
+      <td>21.553722</td>
+      <td>165.963661</td>
+      <td>11.826174</td>
+      <td>3.0</td>
+    </tr>
+    <tr>
+      <th>Digne</th>
+      <td>Everton</td>
+      <td>Defender</td>
+      <td>6.2</td>
+      <td>19.354839</td>
+      <td>6.2</td>
+      <td>22.848898</td>
+      <td>141.663169</td>
+      <td>10.642751</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Wan-Bissaka</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>3.8</td>
+      <td>24.827586</td>
+      <td>5.8</td>
+      <td>23.972910</td>
+      <td>139.042878</td>
+      <td>10.214596</td>
+      <td>5.0</td>
     </tr>
     <tr>
       <th>Chilwell</th>
       <td>Chelsea</td>
       <td>Defender</td>
-      <td>4.0</td>
-      <td>21.355932</td>
+      <td>4.2</td>
+      <td>22.203390</td>
       <td>5.9</td>
-      <td>21.521841</td>
-      <td>126.978863</td>
-      <td>9.141704</td>
-      <td>9.0</td>
+      <td>21.568107</td>
+      <td>127.251834</td>
+      <td>9.312721</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Keane</th>
+      <td>Everton</td>
+      <td>Defender</td>
+      <td>3.5</td>
+      <td>25.400000</td>
+      <td>5.0</td>
+      <td>23.891508</td>
+      <td>119.457542</td>
+      <td>9.236216</td>
+      <td>7.0</td>
     </tr>
     <tr>
       <th>Cresswell</th>
       <td>West Ham</td>
       <td>Defender</td>
-      <td>1.5</td>
-      <td>25.357143</td>
+      <td>2.2</td>
+      <td>26.250000</td>
       <td>5.6</td>
-      <td>24.511388</td>
-      <td>137.263774</td>
-      <td>8.951236</td>
-      <td>10.0</td>
+      <td>23.382632</td>
+      <td>130.942739</td>
+      <td>9.109143</td>
+      <td>8.0</td>
     </tr>
     <tr>
-      <th>Coufal</th>
-      <td>West Ham</td>
+      <th>Cancelo</th>
+      <td>Man City</td>
+      <td>Defender</td>
+      <td>3.0</td>
+      <td>23.793103</td>
+      <td>5.8</td>
+      <td>22.739439</td>
+      <td>131.888747</td>
+      <td>9.106453</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Dunk</th>
+      <td>Brighton</td>
       <td>Defender</td>
       <td>3.2</td>
-      <td>24.166667</td>
+      <td>26.875000</td>
       <td>4.8</td>
-      <td>23.306005</td>
-      <td>111.868825</td>
-      <td>8.577783</td>
-      <td>11.0</td>
-    </tr>
-    <tr>
-      <th>Targett</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>2.2</td>
-      <td>26.200000</td>
-      <td>5.0</td>
-      <td>22.746999</td>
-      <td>113.734997</td>
-      <td>8.499277</td>
-      <td>12.0</td>
+      <td>23.049328</td>
+      <td>110.636776</td>
+      <td>8.972408</td>
+      <td>10.0</td>
     </tr>
     <tr>
       <th>Godfrey</th>
       <td>Everton</td>
       <td>Defender</td>
       <td>6.0</td>
-      <td>18.431373</td>
+      <td>19.607843</td>
       <td>5.1</td>
-      <td>19.153085</td>
-      <td>97.680735</td>
-      <td>8.363320</td>
+      <td>20.261151</td>
+      <td>103.331868</td>
+      <td>8.780913</td>
+      <td>11.0</td>
+    </tr>
+    <tr>
+      <th>Alioski</th>
+      <td>Leeds</td>
+      <td>Defender</td>
+      <td>5.4</td>
+      <td>25.116279</td>
+      <td>4.3</td>
+      <td>19.172826</td>
+      <td>82.443150</td>
+      <td>8.703510</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>Coufal</th>
+      <td>West Ham</td>
+      <td>Defender</td>
+      <td>3.0</td>
+      <td>24.583333</td>
+      <td>4.8</td>
+      <td>23.879148</td>
+      <td>114.619908</td>
+      <td>8.486524</td>
       <td>13.0</td>
     </tr>
     <tr>
-      <th>Keane</th>
-      <td>Everton</td>
+      <th>Evans</th>
+      <td>Leicester</td>
       <td>Defender</td>
-      <td>2.8</td>
-      <td>24.000000</td>
       <td>5.0</td>
-      <td>21.982678</td>
-      <td>109.913390</td>
-      <td>8.182895</td>
+      <td>19.464286</td>
+      <td>5.6</td>
+      <td>19.971126</td>
+      <td>111.838308</td>
+      <td>8.480299</td>
       <td>14.0</td>
     </tr>
     <tr>
-      <th>Tarkowski</th>
-      <td>Burnley</td>
+      <th>Targett</th>
+      <td>Aston Villa</td>
       <td>Defender</td>
-      <td>4.2</td>
-      <td>20.000000</td>
-      <td>5.3</td>
-      <td>20.404575</td>
-      <td>108.144248</td>
-      <td>8.055443</td>
+      <td>2.1</td>
+      <td>26.600000</td>
+      <td>5.0</td>
+      <td>23.305190</td>
+      <td>116.525950</td>
+      <td>8.452378</td>
       <td>15.0</td>
-    </tr>
-    <tr>
-      <th>Shaw</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>2.4</td>
-      <td>22.363636</td>
-      <td>5.5</td>
-      <td>21.958509</td>
-      <td>120.771798</td>
-      <td>8.041121</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>James</th>
-      <td>Chelsea</td>
-      <td>Defender</td>
-      <td>3.6</td>
-      <td>21.372549</td>
-      <td>5.1</td>
-      <td>21.371611</td>
-      <td>108.995218</td>
-      <td>8.032296</td>
-      <td>17.0</td>
     </tr>
     <tr>
       <th>Konsa</th>
       <td>Aston Villa</td>
       <td>Defender</td>
-      <td>2.2</td>
-      <td>24.468085</td>
+      <td>2.1</td>
+      <td>24.893617</td>
       <td>4.7</td>
-      <td>23.791593</td>
-      <td>111.820487</td>
-      <td>7.992283</td>
+      <td>24.153896</td>
+      <td>113.523310</td>
+      <td>7.910938</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Shaw</th>
+      <td>Man Utd</td>
+      <td>Defender</td>
+      <td>2.2</td>
+      <td>22.545455</td>
+      <td>5.5</td>
+      <td>22.417378</td>
+      <td>123.295577</td>
+      <td>7.881026</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Ayling</th>
+      <td>Leeds</td>
+      <td>Defender</td>
+      <td>4.0</td>
+      <td>22.272727</td>
+      <td>4.4</td>
+      <td>22.483849</td>
+      <td>98.928935</td>
+      <td>7.874691</td>
       <td>18.0</td>
+    </tr>
+    <tr>
+      <th>James</th>
+      <td>Chelsea</td>
+      <td>Defender</td>
+      <td>3.3</td>
+      <td>21.764706</td>
+      <td>5.1</td>
+      <td>21.634357</td>
+      <td>110.335223</td>
+      <td>7.822799</td>
+      <td>19.0</td>
     </tr>
     <tr>
       <th>Dias</th>
       <td>Man City</td>
       <td>Defender</td>
       <td>0.8</td>
-      <td>22.666667</td>
-      <td>6.0</td>
-      <td>23.158973</td>
-      <td>138.953836</td>
-      <td>7.925410</td>
-      <td>19.0</td>
-    </tr>
-    <tr>
-      <th>Alioski</th>
-      <td>Leeds</td>
-      <td>Defender</td>
-      <td>4.4</td>
-      <td>23.720930</td>
-      <td>4.3</td>
-      <td>18.646977</td>
-      <td>80.182002</td>
-      <td>7.757758</td>
+      <td>23.220339</td>
+      <td>5.9</td>
+      <td>23.194214</td>
+      <td>136.845861</td>
+      <td>7.742751</td>
       <td>20.0</td>
     </tr>
   </tbody>
