--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -27,243 +27,243 @@
   </thead>
   <tbody>
     <tr>
-      <th>Son</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>8.0</td>
-      <td>22.783505</td>
-      <td>9.7</td>
-      <td>21.975934</td>
-      <td>213.166556</td>
-      <td>14.759708</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
       <th>Salah</th>
       <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>6.6</td>
-      <td>17.343750</td>
+      <td>7.0</td>
+      <td>17.578125</td>
       <td>12.8</td>
-      <td>19.637354</td>
-      <td>251.358136</td>
-      <td>13.956444</td>
+      <td>19.766440</td>
+      <td>253.010427</td>
+      <td>14.487618</td>
+      <td>1.0</td>
+    </tr>
+    <tr>
+      <th>Son</th>
+      <td>Spurs</td>
+      <td>Midfielder</td>
+      <td>6.8</td>
+      <td>22.989691</td>
+      <td>9.7</td>
+      <td>22.693230</td>
+      <td>220.124332</td>
+      <td>14.475369</td>
       <td>2.0</td>
     </tr>
     <tr>
       <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>4.8</td>
-      <td>21.052632</td>
+      <td>5.2</td>
+      <td>21.403509</td>
       <td>11.4</td>
-      <td>22.007039</td>
-      <td>250.880242</td>
-      <td>13.862704</td>
+      <td>21.732479</td>
+      <td>247.750259</td>
+      <td>14.146088</td>
       <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Harrison</th>
-      <td>Leeds</td>
-      <td>Midfielder</td>
-      <td>5.6</td>
-      <td>27.636364</td>
-      <td>5.5</td>
-      <td>25.429174</td>
-      <td>139.860458</td>
-      <td>11.739309</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Ward-Prowse</th>
-      <td>Southampton</td>
-      <td>Midfielder</td>
-      <td>5.0</td>
-      <td>25.762712</td>
-      <td>5.9</td>
-      <td>25.795697</td>
-      <td>152.194613</td>
-      <td>11.359625</td>
-      <td>5.0</td>
     </tr>
     <tr>
       <th>Pereira</th>
       <td>West Brom</td>
       <td>Midfielder</td>
+      <td>5.5</td>
+      <td>28.333333</td>
+      <td>5.4</td>
+      <td>26.389699</td>
+      <td>142.504375</td>
+      <td>11.961893</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Harrison</th>
+      <td>Leeds</td>
+      <td>Midfielder</td>
       <td>5.2</td>
-      <td>27.037037</td>
-      <td>5.4</td>
-      <td>25.444822</td>
-      <td>137.402041</td>
-      <td>11.240187</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Rashford</th>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>4.6</td>
-      <td>18.020833</td>
-      <td>9.6</td>
-      <td>20.081551</td>
-      <td>192.782887</td>
-      <td>10.627205</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Eze</th>
-      <td>Crystal Palace</td>
-      <td>Midfielder</td>
-      <td>7.0</td>
-      <td>21.551724</td>
-      <td>5.8</td>
-      <td>21.601686</td>
-      <td>125.289780</td>
-      <td>10.355697</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Mané</th>
-      <td>Liverpool</td>
-      <td>Midfielder</td>
-      <td>5.4</td>
-      <td>13.162393</td>
-      <td>11.7</td>
-      <td>16.365927</td>
-      <td>191.481349</td>
-      <td>9.740037</td>
-      <td>9.0</td>
-    </tr>
-    <tr>
-      <th>Gündogan</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>1.8</td>
-      <td>26.785714</td>
+      <td>27.678571</td>
       <td>5.6</td>
-      <td>25.128919</td>
-      <td>140.721945</td>
-      <td>9.265294</td>
-      <td>10.0</td>
+      <td>25.006222</td>
+      <td>140.034842</td>
+      <td>11.500438</td>
+      <td>5.0</td>
     </tr>
     <tr>
-      <th>Bale</th>
-      <td>Spurs</td>
+      <th>Ward-Prowse</th>
+      <td>Southampton</td>
       <td>Midfielder</td>
-      <td>9.8</td>
-      <td>10.760870</td>
-      <td>9.2</td>
-      <td>12.553852</td>
-      <td>115.495434</td>
-      <td>8.725850</td>
-      <td>11.0</td>
+      <td>4.5</td>
+      <td>26.101695</td>
+      <td>5.9</td>
+      <td>25.960827</td>
+      <td>153.168882</td>
+      <td>11.165286</td>
+      <td>6.0</td>
     </tr>
     <tr>
       <th>Soucek</th>
       <td>West Ham</td>
       <td>Midfielder</td>
-      <td>1.8</td>
-      <td>26.153846</td>
+      <td>3.0</td>
+      <td>27.692308</td>
       <td>5.2</td>
-      <td>24.916123</td>
-      <td>129.563839</td>
-      <td>8.653489</td>
+      <td>26.141262</td>
+      <td>135.934564</td>
+      <td>9.946180</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Gündogan</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>2.8</td>
+      <td>28.035714</td>
+      <td>5.6</td>
+      <td>24.372323</td>
+      <td>136.485009</td>
+      <td>9.932012</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>Rashford</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>3.4</td>
+      <td>18.125000</td>
+      <td>9.6</td>
+      <td>19.722666</td>
+      <td>189.337590</td>
+      <td>9.808078</td>
+      <td>9.0</td>
+    </tr>
+    <tr>
+      <th>Eze</th>
+      <td>Crystal Palace</td>
+      <td>Midfielder</td>
+      <td>5.8</td>
+      <td>21.186441</td>
+      <td>5.9</td>
+      <td>21.596600</td>
+      <td>127.419941</td>
+      <td>9.664243</td>
+      <td>10.0</td>
+    </tr>
+    <tr>
+      <th>Mané</th>
+      <td>Liverpool</td>
+      <td>Midfielder</td>
+      <td>5.0</td>
+      <td>13.675214</td>
+      <td>11.7</td>
+      <td>16.211553</td>
+      <td>189.675166</td>
+      <td>9.661581</td>
+      <td>11.0</td>
+    </tr>
+    <tr>
+      <th>Mount</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>2.7</td>
+      <td>19.863014</td>
+      <td>7.3</td>
+      <td>21.412286</td>
+      <td>156.309687</td>
+      <td>8.504184</td>
       <td>12.0</td>
     </tr>
     <tr>
       <th>Westwood</th>
       <td>Burnley</td>
       <td>Midfielder</td>
-      <td>5.4</td>
-      <td>20.377358</td>
+      <td>4.8</td>
+      <td>20.754717</td>
       <td>5.3</td>
-      <td>21.429486</td>
-      <td>113.576275</td>
-      <td>8.616033</td>
+      <td>21.971329</td>
+      <td>116.448045</td>
+      <td>8.478532</td>
       <td>13.0</td>
     </tr>
     <tr>
-      <th>Mount</th>
-      <td>Chelsea</td>
+      <th>Trossard</th>
+      <td>Brighton</td>
       <td>Midfielder</td>
-      <td>2.8</td>
-      <td>19.589041</td>
-      <td>7.3</td>
-      <td>20.923710</td>
-      <td>152.743082</td>
-      <td>8.391244</td>
+      <td>3.2</td>
+      <td>23.818182</td>
+      <td>5.5</td>
+      <td>21.888448</td>
+      <td>120.386463</td>
+      <td>8.430041</td>
       <td>14.0</td>
-    </tr>
-    <tr>
-      <th>Sterling</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>2.8</td>
-      <td>13.545455</td>
-      <td>11.0</td>
-      <td>17.473304</td>
-      <td>192.206341</td>
-      <td>8.313914</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>De Bruyne</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>0.0</td>
-      <td>10.847458</td>
-      <td>11.8</td>
-      <td>21.430063</td>
-      <td>252.874743</td>
-      <td>8.301564</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Højbjerg</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>5.0</td>
-      <td>21.224490</td>
-      <td>4.9</td>
-      <td>21.414904</td>
-      <td>104.933030</td>
-      <td>8.264198</td>
-      <td>17.0</td>
-    </tr>
-    <tr>
-      <th>Greenwood</th>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>7.4</td>
-      <td>14.444444</td>
-      <td>7.2</td>
-      <td>15.073565</td>
-      <td>108.529669</td>
-      <td>8.009343</td>
-      <td>18.0</td>
     </tr>
     <tr>
       <th>Tielemans</th>
       <td>Leicester</td>
       <td>Midfielder</td>
-      <td>2.8</td>
-      <td>20.156250</td>
+      <td>2.7</td>
+      <td>20.468750</td>
       <td>6.4</td>
-      <td>21.082968</td>
-      <td>134.930992</td>
-      <td>7.841222</td>
+      <td>22.104837</td>
+      <td>141.470955</td>
+      <td>8.071472</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Højbjerg</th>
+      <td>Spurs</td>
+      <td>Midfielder</td>
+      <td>4.2</td>
+      <td>21.428571</td>
+      <td>4.9</td>
+      <td>22.361412</td>
+      <td>109.570920</td>
+      <td>8.001474</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Foden</th>
+      <td>Man City</td>
+      <td>Midfielder</td>
+      <td>4.0</td>
+      <td>21.147541</td>
+      <td>6.1</td>
+      <td>18.622717</td>
+      <td>113.598572</td>
+      <td>7.961418</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Raphinha</th>
+      <td>Leeds</td>
+      <td>Midfielder</td>
+      <td>2.6</td>
+      <td>23.272727</td>
+      <td>5.5</td>
+      <td>21.446575</td>
+      <td>117.956163</td>
+      <td>7.808877</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Groß</th>
+      <td>Brighton</td>
+      <td>Midfielder</td>
+      <td>4.3</td>
+      <td>19.655172</td>
+      <td>5.8</td>
+      <td>19.773008</td>
+      <td>114.683445</td>
+      <td>7.801144</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Zaha</th>
-      <td>Crystal Palace</td>
+      <th>Bale</th>
+      <td>Spurs</td>
       <td>Midfielder</td>
-      <td>3.8</td>
-      <td>18.333333</td>
-      <td>7.2</td>
-      <td>17.900622</td>
-      <td>128.884478</td>
-      <td>7.708291</td>
+      <td>8.0</td>
+      <td>10.869565</td>
+      <td>9.2</td>
+      <td>12.248072</td>
+      <td>112.682259</td>
+      <td>7.748204</td>
       <td>20.0</td>
     </tr>
   </tbody>
